deployment/kubernetes_gcp/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hero-manager-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api/marvel/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: hero-manager-marvel
                port:
                  number: 8082
          - path: /api/statistics
            pathType: ImplementationSpecific
            backend:
              service:
                name: hero-manager-statistics
                port:
                  number: 8083
          - path: /api/statistics/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: hero-manager-statistics
                port:
                  number: 8083
          - path: /api/*
            pathType: Prefix
            backend:
              service:
                name: hero-manager-backend
                port:
                  number: 8081
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hero-manager-frontend
                port: 
                  number: 8080
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: hero-manager-frontend
                port: 
                  number: 8080
